--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ url: jasti.github.io
 description: Ramble on
 twitter: vamseejasti
 github: jasti
-gravatar_url:
+gravatar_url:http://www.gravatar.com/avatar/9fa27db666d93b5459adf76aa0b87e05.png
