add site description

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ rdiscount:
 name: Vamsee Jasti
 blog_name: Sent from my ipod
 url: jasti.github.io
-description: Ramble on
+description: Thoughts, nerdery & silly experiments
 twitter: vamseejasti
 github: jasti
