Rename subheading of the blog

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ rdiscount:
 name: Vamsee Jasti
 blog_name: Sent from my ipod
 url: jasti.github.io
-description: Thoughts, nerdery & silly experiments
+description: Thoughts, nerdery & experiments
 twitter: vamseejasti
 github: jasti
