--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
-markdown: rdiscount
+markdown: kramdown
 highlighter: pygments
 permalink: /posts/:title
-rdiscount:
-  extensions: [smart]
-
 name: Vamsee Jasti
 blog_name: Sent from my ipod
 url: jasti.github.io
