Update to description

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /posts/:title
 name: Vamsee Jasti
 blog_name: Sent from my ipod
 url: jasti.github.io
-description: Thoughts, Nerdery & Experiments
+description: It didn't happen if I didn't write it down
 twitter: vamseejasti
 github: jasti
 tags:
